--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div id="page-wrapper">
     <h1>Erick Recher</h1>
-    <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwihl6-e4NnVAhVniVQKHVEpDL8QjRwIBw&url=https%3A%2F%2Fmedium.com%2F%40erickrecher&psig=AFQjCNHJ_e2oSQmv3kgu5TAG2MzI_y_WVg&ust=1502904108878213" alt="Erick Recher, Jay, and Silent Bob">
+    <img src="https://cdn-images-1.medium.com/fit/c/200/200/0*XuwKP2-T0WYET8LP." alt="Erick Recher, Jay, and Silent Bob">
   </div>
 </body>
 </html>
