--- a/about.html
+++ b/about.html
@@ -23,22 +23,32 @@
 <body>
   <div class="header">
     <img src="https://avatars2.githubusercontent.com/u/9275050?v=4&s=200" alt="Erick Recher">
-    <h1>Erick Recher's (aka JavaScriptForLife) Portfolio</h1>
+    <h1>Learn About Me!</h1>
     <nav>
       <ul>
-        <li><a href="about.html">Learn About Me</a></li>
         <li><a href="sites.html">Other Sites I Have Built</a></li>
         <li><a href="code.html">Javascript Code For Others To Use</a></li>
         <li><a href="teach.html">Teach Yourself How To Code</a></li>
+        <li><a href="index.html">Back To Home</a></li>
         <li><a href="mailto:javascriptforlife@gmail.com">Email Me</a></li>
       </ul>
     </nav>
   </div>
   <div class="content">
-    <h2>What This Site Is About</h2>
-    <p>As a web developer, I want show others what I do, how they too can become a
-       web developer, and a place where they can reusable code. 
-    </p>
+    <h2>Full Stack Web Development</h2>
+    <p>The libraries and languages I use are:</p>
+    <ol>
+      <li>Javascript</li>
+      <li>Ruby</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>jQuery</li>
+      <li>Node.js</li>
+      <li>Bootstrap</li>
+      <li>Angular</li>
+      <li>Ruby on Rails</li>
+      <li>React</li>
+    </ol>
   </div>
   <footer>
     <p>&copy;JavascriptForLife<p>
