--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <link rel="stylesheet" type="text/css" href="vendor/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="assets/css/main.css">
   <!-- scripts -->
-  <script type="text/javascript" src="assets/js/app.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="app.js"></script>
+
   <!-- favicon -->
   <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
   <style>
@@ -37,8 +39,12 @@
   <div class="content">
     <h2>What This Site Is About</h2>
     <p>As a web developer, I want show others what I do, how they too can become a
-       web developer, and a place where they can reusable code. 
+       web developer, and a place where they can find reusable code.
     </p>
+    <h1 class="languages">Languages I am using.</h1>
+    <h1>Projects that I have worked on</h1>
+      <ol class="projects">
+      </ol>
   </div>
   <footer>
     <p>&copy;JavascriptForLife<p>
