--- a/teach.html
+++ b/teach.html
@@ -4,8 +4,14 @@
   <style>
   @import url('https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display');
   </style>
+  <!-- stylesheets -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="vendor/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+  <!-- vendor scripts -->
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
 </head>
 <body>
   <div class="header">
@@ -33,6 +39,6 @@
       once you learn a language, it's a lot easier to learn other languages.</p>
     <footer>
       <p>&copy;JavascriptForLife<p>
-    </footer>  
+    </footer>
 </body>
 </html>
