--- a/code.html
+++ b/code.html
@@ -1,58 +1,68 @@
 !<!DOCTYPE html>
 <html>
 <head>
+  <title>Portfolio</title>
+  <!-- meta -->
+  <meta charset="utf-8" />
+  <meta name="description" content="Personal Site">
+  <meta name="author" content="GA Student">
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+  <!-- mobile -->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- styles -->
+  <link rel="stylesheet" type="text/css" href="vendor/css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
+  <!-- scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="app.js"></script>
+
+  <!-- favicon -->
+  <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
   <style>
   @import url('https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display');
   </style>
-  <link rel="stylesheet" type="text/css" href="vendor/css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-  <!-- VENDOR SCRIPTS -->
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
 </head>
-<body>
-  <!-- bootstrap nav -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+<body id="top">
+  <header class="primary-header container group">
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+    <h1 class="logo">
+      <a href="index.html">Erick <br> Recher</a>
+    </h1>
+   <!-- <img src="https://avatars2.githubusercontent.com/u/9275050?v=4&s=200" alt="Erick Recher"> -->
+    <h3 class="tagline">Code For You To Use</h3>
+    <ul>
+      <nav class="nav primary-nav">
+        <a href="index.html">Home/</a>
+        <a href="sites.html">Sites I have built/</a>
+        <a href="teach.html">Teach Yourself How To Code/</a>
+        <a href="mailto:javascriptforlife@gmail.com">Email Me</a>
+      </nav>
+    </ul>
+  </header>
+  <section class="hero container">
+    <p> There are a lot of ways to write just one simple function. You can write
+      code that is really easy to read, multiple lines, or you can solve it all on one line
+      (code golf). You can take your code to a whole other level, by using recursion
+      and Higher Order Functions (HOF). The run time of your code is most important.
+      Step up your Algorithm game!
+    </p>
+  </section>
+
+  <section class="row">
+      <div class="grid">
+        <h2>Reusable Code</h2>
+
       </div>
-    </nav>
+    </section>
 
-  <div class="header">
-    <img src="https://cdn-images-1.medium.com/fit/c/200/200/0*XuwKP2-T0WYET8LP." alt="Erick Recher, Jay, and Silent Bob">
-    <h1>Code</h1>
-    <nav>
-      <ul>
-        <li><a href="sites.html">Other Sites I Have Built</a></li>
-        <li><a href="index.html">Back To Home</a></li>
-        <li><a href="teach.html">Teach Yourself How To Code</a></li>
-        <li><a href="mailto:javascriptforlife@gmail.com">Email Me</a></li>
-      </ul>
-    </nav>
-  </div>
-  <footer>
-    <p>&copy;JavascriptForLife<p>
-  </footer>
-</body>
+    <footer class="primary-footer container group">
+      <small>&copy; JavascriptForLife</small>
+      <nav class="nav primary-nav">
+        <a href="index.html">Home/</a>
+        <a href="sites.html">Sites I have built/</a>
+        <a href="teach.html">Teach Yourself How To Code/</a>
+        <a href="mailto:javascriptforlife@gmail.com">Email Me</a>
+      </nav>
+    </footer>
 </html>
