--- a/teach.html
+++ b/teach.html
@@ -13,32 +13,55 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 </head>
-<body>
-  <div class="header">
-    <img src="https://pbs.twimg.com/profile_images/471344634376224768/CUPYxPxs_200x200.jpeg" alt="Erick Recher and Guitar">
-    <h1>Welcome To Full Stack Web Development</h1>
-    <nav>
-      <ul>
-        <li><a href="sites.html">Other Sites I Have Built</a></li>
-        <li><a href="code.html">Javascript Code For Others To Use</a></li>
-        <li><a href="index.html">Go Back Home</a></li>
-        <li><a href="mailto:javascriptforlife@gmail.com">Email Me</a></li>
-      </ul>
-    </nav>
-  </div>
-  <p> There are a lot of different roles in the tech world. For me, the most creative
-    is Full Stack Web Development. You can create your own apps. You are only limmited
-    by your own genius. Build apps to help people, build apps to help yourself, and/or build
-    apps to make money. Whatever your decision may be, getting started can be rough. That's why
-    I am passing on my knowledge. You can use the knowledge to completely
-    teach yourself or use this path to establish a working knowledge of the javascript world to enter
-    into a bootcamp.</p>
-    <h1> Start with Javascript</h1>
-    <p> It's really important to start with a programming language before you learn HTML and CSS. Why?
-      programming is a lot harder to learn than HTML and CSS. The sooner you get started the better. Also,
-      once you learn a language, it's a lot easier to learn other languages.</p>
-    <footer>
-      <p>&copy;JavascriptForLife<p>
+<body id="top">
+
+  <header class="primary-header container group">
+
+    <h1 class="logo">
+      <a href="index.html">Erick <br> Recher</a>
+    </h1>
+   <!-- <img src="https://avatars2.githubusercontent.com/u/9275050?v=4&s=200" alt="Erick Recher"> -->
+    <h3 class="tagline">Full Stack Web Development</h3>
+    <ul>
+      <nav class="nav primary-nav">
+        <a href="index.html">Home/</a>
+        <a href="sites.html">Sites I have built/</a>
+        <a href="code.html">Reusable Code/</a>
+        <a href="mailto:javascriptforlife@gmail.com">Email Me/</a>
+      </nav>
+    </ul>
+  </header>
+  <section class="hero container">
+    <h2>Become A Full Stack Web Developer</h2>
+    <p>There are a lot of careers in the world of tech, but this is a career
+    where you infuse tech and creativity. People can see what you've created and
+    you help change their lives for the better.</p>
+  </section>
+
+  <section class="row">
+      <div class="grid">
+        <p> There are a lot of different roles in the tech world. For me, the most creative
+          is Full Stack Web Development. You can create your own apps. You are only limmited
+          by your own genius. Build apps to help people, build apps to help yourself, and/or build
+          apps to make money. Whatever your decision may be, getting started can be rough. That's why
+          I am passing on my knowledge. You can use the knowledge to completely
+          teach yourself or use this path to establish a working knowledge of the javascript world to enter
+          into a bootcamp.</p>
+          <h1> Start with Javascript</h1>
+          <p> It's really important to start with a programming language before you learn HTML and CSS. Why?
+            programming is a lot harder to learn than HTML and CSS. The sooner you get started the better. Also,
+            once you learn a language, it's a lot easier to learn other languages.
+          </p>
+      </div>
+    </section>
+    <footer class="primary-footer container group">
+      <small>&copy; JavascriptForLife</small>
+      <nav class="nav primary-nav">
+        <a href="index.html">Home/ </a>
+        <a href="sites.html">Sites I have built/ </a>
+        <a href="code.html">Reusable Code/</a>
+        <a href="mailto:javascriptforlife@gmail.com"> Email Me</a>
+      </nav>
     </footer>
 </body>
 </html>
