--- a/index.html
+++ b/index.html
@@ -56,21 +56,23 @@
 
   <section class="row">
       <div class="grid">
+        <img src="assets/imgs/erick.jpg" alt="Erick" class="pic">
         <h2>What This Site Is About</h2>
-        <h4> I have gone a lot of different routes in becoming a web developer. I started
-          off not knowing which way to go. A lot of my friends were Sys Admins, so I started
+        <h4> I have gone a lot of different routes before becoming a web developer. I started
+          off not knowing which way to go. A lot of my friends were sysadmins, so I started
           studying Linux and Networking. Feeling discouraged because it wasn't creative enough for me,
           I decided to pursue a Computer Science degree. I attended SJSU, but their computer science program
-          is absolutely horrible. In my first Java programming class, 70% dropped the class. Out of what
-          was left, only a 1/3 passed from that 30%. There were four unseen teachers above
+          is absolutely horrible. In my first Java programming class,
+          70% of the students dropped. Out of who was left, only a 1/3 passed from that 30%.
+          There were four unseen teachers above
           our teacher, they dictated the homework and tests. The teacher that was "teaching" us
           refused to help with homework or any lab assignments. So I dropped, but tried again next semester.
-          This time, the head of the CS department was teaching the Intro to CS class, Java.
+          This time, the head of the CS department was teaching programming in Java.
           The teacher was completely arrogant, insulting anyone who asked questions, then asking
           why no one was asking questions. He was a professional, not a teacher. Eventually, SJSU
           decided to lower the requirements for a CS degree because a majority of the students
-          were dropping. I decided to drop the CS degree and went on to finish my Music Degree,
-          pursuing Music Tech.</h4> <br>
+          were dropping. I decided to drop the CS degree and went on to finish my music degree,
+          pursuing music tech.</h4> <br>
           <h4>However, I wasn't about to give up. I decided to teach myself by pursuing other non traditional routes.
           Everything you need to know is on the web, but there is still a lot you won't learn teaching yourself.
           Proper coding techniques, which technologies to learn, algorithms, which field to pursue, and more.
@@ -78,9 +80,9 @@
           So far, I have gone halfway through a CS degree, attended multiple bootcamp
           preps (Hack Reactor and App Academy), worked through multiple coding websites, studied Linux, studied networking,
           studied multiple languages, and then finally attended a coding bootcamp (General Assembly).
-          This website is not only for displaying some of my work, but to help others learn how
-          to become a web developer.</h4> <br>
-          <h4>This site is to display my work, but more importantly it's to help others learn how to code.
+          </h4> <br>
+          <h4>This website is not only for displaying some of my work, but to help others learn how
+          to become a web developer.
           The first page is to give you links to apps I have built. The second page I've dedicated to giving you step by step instructions on how to become a web
           developer. I've also dedicated another page for reusable javascript code. Contact me if you need any help
           or any kind of direction. Not code help, but career guidance. ;)
