--- a/sites.html
+++ b/sites.html
@@ -50,8 +50,27 @@
 
   <section class="row">
       <div class="grid">
-        <h2>What This Site Is About</h2>
-        <h4> </h4>
+        <h2><a href="https://murmuring-savannah-55075.herokuapp.com/"> ComeShred.com</a></h2>
+        <h4> This is a social networking web app for extreme sports.
+          There is a map where you can find new spots or add spots to
+          skate, surf, snowboard, parkour, scooter, bmx, or whatever extreme sport
+          you do. You can add friends and message each other. There is also
+          a page for posting about your sport, events, or whatever else is related
+          to extreme sports.
+        </h4>
+        <h2><a href="https://serene-mesa-96151.herokuapp.com/ "> Vagabond</a></h2>
+        <h4>
+        </h4>
+        <h2><a href="https://shrouded-scrubland-16014.herokuapp.com/"> BeerApp</a></h2>
+        <h4> This is a web app for beer enthusiasts.
+          You can find new beers or add new beers to the site's list.
+
+        </h4>
+        <h2><a href="http://craftcolorist.com/"> Colorist Website</a></h2>
+        <h4> This is a website I created for a friend using godaddy and
+          and their website builder. I stylized and changed around their
+          components.
+        </h4>
       </div>
     </section>
 
