--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section class="row">
       <div class="grid">
         <img src="assets/imgs/erick.jpg" alt="Erick" class="pic">
-        <h2>What This Site Is About</h2>
+        <h2>My Coding Journey</h2>
         <h4> I have gone a lot of different routes before becoming a web developer. I started
           off not knowing which way to go. A lot of my friends were sysadmins, so I started
           studying Linux and Networking. Feeling discouraged because it wasn't creative enough for me,
@@ -81,6 +81,7 @@
           preps (Hack Reactor and App Academy), worked through multiple coding websites, studied Linux, studied networking,
           studied multiple languages, and then finally attended a coding bootcamp (General Assembly).
           </h4> <br>
+          <h2>What This Site Is About</h2>
           <h4>This website is not only for displaying some of my work, but to help others learn how
           to become a web developer.
           The first page is to give you links to apps I have built. The second page I've dedicated to giving you step by step instructions on how to become a web
