--- a/sites.html
+++ b/sites.html
@@ -66,6 +66,10 @@
           You can find new beers or add new beers to the site's list.
 
         </h4>
+        <h2><a href="https://micdropapp.herokuapp.com/playlists"> MicDrop</a></h2>
+        <h4> This is a web app for creating playlists.
+          
+        </h4>
         <h2><a href="http://craftcolorist.com/"> Colorist Website</a></h2>
         <h4> This is a website I created for a friend using godaddy and
           and their website builder. I stylized and changed around their
