--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <h2>Dedicated to Creating Original Web Apps</h2>
 
-    <p>As a web developer I want show others some of what I've done, how they too can become a
+    <p>As a web developer, I want to show others some of the apps I've built, how they too can become a
        web developer, and a place where they can find reusable code. Welcome to my site.
     </p>
 
