working on app show

--- a/sites.html
+++ b/sites.html
@@ -55,11 +55,23 @@
           There is a map where you can find new spots or add spots to
           skate, surf, snowboard, parkour, scooter, bmx, or whatever extreme sport
           you do. You can add friends and message each other. There is also
-          a page for posting about your sport, events, or whatever else is related
-          to extreme sports.
+          a page for posting about your sport, events, and/or whatever else is related
+          to extreme sports.</h4>
+        <h4>
+          This app consists of Ruby on Rails, Ruby, Materialize, jQuery,
+          HTML, CSS, and a lot of different gems. Gems such as bcrypt, geocoder,
+          gmaps4rails, underscore, devise, and mailboxer. Deployed on Heroku and
+          connected to Google Domains.
         </h4>
         <h2><a href="https://serene-mesa-96151.herokuapp.com/ "> Vagabond</a></h2>
         <h4>
+          This is a web app for a traveling agency. Different cities have their own
+          pages you can post about. You can create your own account and see all of your
+          own posts. This app was created by Jonathan Mules, Huan Ming Liao, and I.</h4>
+        <h4>
+          This app consists of Ruby on Rails, Ruby, Bootstrap, jQuery,
+          HTML, CSS, Javascript, and different gems. Gems such as bcrypt and
+          FFaker. Deployed on Heroku.
         </h4>
         <h2><a href="https://shrouded-scrubland-16014.herokuapp.com/"> BeerApp</a></h2>
         <h4> This is a web app for beer enthusiasts.
@@ -67,13 +79,15 @@
 
         </h4>
         <h2><a href="https://micdropapp.herokuapp.com/playlists"> MicDrop</a></h2>
-        <h4> This is a web app for creating playlists.
-          
+        <h4> This is a web app for creating playlists. Created by my friend Bryan
+          Albini and I, it's a MEN stack app. Simple, but one our first apps.
+          Deployed on Heroku.
         </h4>
         <h2><a href="http://craftcolorist.com/"> Colorist Website</a></h2>
         <h4> This is a website I created for a friend using godaddy and
           and their website builder. I stylized and changed around their
-          components.
+          components. Simple and easy, was my first experinece publishing
+          a website for a friend.
         </h4>
       </div>
     </section>
