--- a/sites.html
+++ b/sites.html
@@ -53,9 +53,9 @@
         <h2><a href="https://murmuring-savannah-55075.herokuapp.com/"> ComeShred.com</a></h2>
         <h4> This is a social networking web app for extreme sports.
           There is a map where you can find new spots or add spots to
-          skate, surf, snowboard, parkour, scooter, bmx, or whatever extreme sport
+          skate, surf, snowboard, parkour, scooter, bmx, or whatever extreme sports
           you do. You can add friends and message each other. There is also
-          a page for posting about your sport, events, and/or whatever else is related
+          a page for posting about your sports, events, and/or whatever else is related
           to extreme sports.</h4>
         <h4>
           This app consists of Ruby on Rails, Ruby, Materialize, jQuery,
@@ -67,25 +67,29 @@
         <h4>
           This is a web app for a traveling agency. Different cities have their own
           pages you can post about. You can create your own account and see all of your
-          own posts. This app was created by Jonathan Mules, Huan Ming Liao, and I.</h4>
-        <h4>
+          own posts. This app was created by Jonathan Mules, Huan Ming Liao, and I.
           This app consists of Ruby on Rails, Ruby, Bootstrap, jQuery,
           HTML, CSS, Javascript, and different gems. Gems such as bcrypt and
           FFaker. Deployed on Heroku.
         </h4>
         <h2><a href="https://shrouded-scrubland-16014.herokuapp.com/"> BeerApp</a></h2>
-        <h4> This is a web app for beer enthusiasts.
-          You can find new beers or add new beers to the site's list.
-
+        <h4> This is a web app for beer enthusiasts. You can find new beers or add new
+          beers to the site's list. You can also rate beers for others to see.
+          This app was created by Bryan Reese, Jonathan Mules, and I.
+          Technologies that were used are Ruby on Rails, Ruby, jQuery,
+          Ransack gem (for searching), Ratyrate gem (for star rating), and Materialize.
         </h4>
         <h2><a href="https://micdropapp.herokuapp.com/playlists"> MicDrop</a></h2>
         <h4> This is a web app for creating playlists. Created by my friend Bryan
-          Albini and I, it's a MEN stack app. Simple, but one our first apps.
+          Albini and I, it's a MEN stack app. Simple, but one our first apps. We used
+          Mongo DB, Mongoose, Boostrap, Javascript, EJS, and Express. It works
+          as a single page app, even though there is no front end framework! The other creator
+          and I are working on turning it into a Facebook app.
           Deployed on Heroku.
         </h4>
         <h2><a href="http://craftcolorist.com/"> Colorist Website</a></h2>
         <h4> This is a website I created for a friend using godaddy and
-          and their website builder. I stylized and changed around their
+          their website builder. I stylized and changed around their
           components. Simple and easy, was my first experinece publishing
           a website for a friend.
         </h4>
