--- a/sites.html
+++ b/sites.html
@@ -82,7 +82,7 @@
         <h2><a href="https://micdropapp.herokuapp.com/playlists"> MicDrop</a></h2>
         <h4> This is a web app for creating playlists. Created by my friend Bryan
           Albini and I, it's a MEN stack app. Simple, but one our first apps. We used
-          Mongo DB, Mongoose, Boostrap, Javascript, EJS, and Express. It works
+          Mongo DB, Mongoose, Bootstrap, Javascript, EJS, and Express. It works
           as a single page app, even though there is no front end framework! The other creator
           and I are working on turning it into a Facebook app.
           Deployed on Heroku.
