--- a/sites.html
+++ b/sites.html
@@ -43,7 +43,7 @@
   </header>
   <section class="hero container">
 
-    <h2>Web Apps and Web Sites I Have Created</h2>
+    <h2>Web Apps and Websites I Have Created</h2>
     <p>
     </p>
   </section>
