--- a/teach.html
+++ b/teach.html
@@ -11,7 +11,8 @@
   <!-- vendor scripts -->
   <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
+  <!-- favicon -->
+  <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
 </head>
 <body id="top">
 
@@ -20,7 +21,6 @@
     <h1 class="logo">
       <a href="index.html">Erick <br> Recher</a>
     </h1>
-   <!-- <img src="https://avatars2.githubusercontent.com/u/9275050?v=4&s=200" alt="Erick Recher"> -->
     <h3 class="tagline">Full Stack Web Development</h3>
     <ul>
       <nav class="nav primary-nav">
@@ -35,18 +35,29 @@
     <h2>Become A Full Stack Web Developer</h2>
     <p>There are a lot of careers in the world of tech, but this is a career
     where you infuse tech and creativity. People can see what you've created and
-    you help change their lives for the better.</p>
+    you can chelp change their lives for the better.</p>
   </section>
 
   <section class="row">
       <div class="grid">
+        <h1>Web Development</h1>
         <p> There are a lot of different roles in the tech world. For me, the most creative
-          is Full Stack Web Development. You can create your own apps. You are only limmited
+          is Full Stack Web Development. You can create your own web apps. You are only limited
           by your own genius. Build apps to help people, build apps to help yourself, and/or build
-          apps to make money. Whatever your decision may be, getting started can be rough. That's why
-          I am passing on my knowledge. You can use the knowledge to completely
-          teach yourself or use this path to establish a working knowledge of the javascript world to enter
+          apps to make money. Whatever your decision may be, getting started can be rough. That is why
+          I am passing on my knowledge. You can use this knowledge to completely
+          teach yourself or you can use this path to establish a working knowledge of javascript to enter
           into a bootcamp.</p>
+          <h1> Different Tech Stacks</h1>
+          <p> There are a lot of different Tech Stacks. A Tech Stack is a full stack of web technologies
+            you use to build a web app, divided into Front End and Back End. Front End is what you see, Back End
+            is where are all of the information is stored. A web app is a website like Facebook or Google. It's not the exact
+            same thing as building an IOS app or Android app. Each of those are their own careers in tech.
+            The two tech stacks that I am experienced with are Ruby on Rails and the MERN/MEAN tech stacks. Yes there are others,
+            but focus on one, then you can learn any other. For now, we are going to focus on the MEAN/MERN stack.
+            MERN stands for Mongo DB, Express, React, and Node js. MEAN stands for Mongo DB, Express, Angular, and Node js.
+            These are Javascript based Full Stacks.
+          </p>
           <h1> Start with Javascript</h1>
           <p> It's really important to start with a programming language before you learn HTML and CSS. Why?
             programming is a lot harder to learn than HTML and CSS. The sooner you get started the better. Also,
