--- a/code.html
+++ b/code.html
@@ -54,6 +54,7 @@
         <h2>Reusable Code</h2>
 
       </div>
+      <h1 class="work">This Page Is A Work In Progress</h1>
     </section>
 
     <footer class="primary-footer container group">
