--- a/teach.html
+++ b/teach.html
@@ -59,11 +59,46 @@
             These are Javascript based Full Stacks.
           </p>
           <h1> Start with Javascript</h1>
-          <p> It's really important to start with a programming language before you learn HTML and CSS. Why?
-            programming is a lot harder to learn than HTML and CSS. The sooner you get started the better. Also,
-            once you learn a language, it's a lot easier to learn other languages.
+          <p> This is the absolutely most important step in your whole journey, one you will work on your entire career.
+            Start with a programming language before you learn HTML and CSS. Why?
+            Programming is a lot harder to learn than HTML and CSS. The sooner you get started the better. Also,
+            once you learn a language, it's a lot easier to learn other languages because a lot of them are the exact
+            same concepts just done differently. Coding is hard, it's not easy. Spend one to two hours a day.
+            You may hit a wall when you are first getting started, but know this: it will all make sense. It will also become
+            a lot of fun. It's all about problem solving and becoming a better critical thinker. Well, where to start?
+          </p>
+          <h2>-Sites To Learn Javascript-</h2>
+            <ul>
+              <a href="https://www.codecademy.com/">CodeAcademy.com</a>
+                <p>CodeAcademy has a lot! You can do the free version or pay if you want help. I've done both.
+                  I've used it for multiple languages, great way to get started. Just stick with Javascript.
+                  After you've gotten a good handle on JS, then use it for HTML, CSS, and the Command Line. CodeAcademy is
+                  the perfect way to get started. They give you a great basis to get started with.
+                </p>
+                <a href="https://www.hackreactor.com/prep-programs?utm_source=googlesearchnetwork&utm_medium=cpc&utm_campaign=P_Search_Brand_Prep">Hack Reactor Prep</a>
+                  <p>You can do the free version or pay if you want help. I've done both.
+                    This is a great way to solidify your skills and to move on to the next level. You won't be able
+                    to make it into the program if you haven't solidified your skills on CodeAcademy.
+                  </p>
+            </ul>
+          <h2>-Learn Higher Order Functions-</h2>
+            <a href="https://medium.com/humans-create-software/a-dirt-simple-introduction-to-higher-order-functions-in-javascript-b33bf9e19056">Intro to HOFs</a>
+            <p> A HOF is a function that accepts another function as an arguement. Fancy For Loops that do wondeful
+              things for you. Learn them and love them. Also, the guy in the above article has a wonderful youtube
+              channel that is great for learning about JS in all of it's glory.
+            </p>
+            <h2>-Learn Recursion-</h2>
+              <a href="https://www.cs.umd.edu/class/fall2002/cmsc214/Tutorial/recursion.html">Intro to Recursion</a>
+              <p> Recursion is a rabbit hole you want to go down. It's a function that calls itself until it solves
+                a problem by solving parts of a problem, one at a time. You need a base case and then a recursive call.
+                Read the above article to start down the path of recursion.
+              </p>
+      <h1>HTML & CSS</h1>
+          <p>
+
           </p>
       </div>
+      <h1 class="work">This Page Is A Work In Progress</h1>
     </section>
     <footer class="primary-footer container group">
       <small>&copy; JavascriptForLife</small>
@@ -71,7 +106,7 @@
         <a href="index.html">Home/ </a>
         <a href="sites.html">Sites I have built/ </a>
         <a href="code.html">Reusable Code/</a>
-        <a href="mailto:javascriptforlife@gmail.com"> Email Me</a>
+        <a href="mailto:javascriptforlife@gmail.com"> Email Me/</a>
       </nav>
     </footer>
 </body>
