--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   </header>
   <section class="hero container">
 
-    <h2>Dedicated to Creating Original Web Apps</h2>
+    <h2>Dedicated To Creating Original Web Apps</h2>
 
-    <p>As a web developer, I want to show others some of the apps I've built, how they too can become a
+    <p>As a web developer, I want to show others some of the apps I have built, how they too can become a
        web developer, and a place where they can find reusable code. Welcome to my site.
     </p>
 
